2005-12-24  Aaron Bockover  <aaron@aaronbock.net>

	* musicbrainz-sharp: Created a standalone project from
	the MusicBrainz C# bindings in Banshee; imported into
	abock.org Subversion, which is now the central development
	point for the bindings and utility wrapper classes

